# Kleroterion

./: .editorconfig  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  io.github.diegoivan.Kleroterion.json  kleroterion.doap  meson.build  meson_options.txt  page.codeberg.foreverxml.Random.json  page.codeberg.foreverxml.Random.json~  random.doap
_build/: .ninja_log  build.ninja  compile_commands.json
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
_build/meson-logs/: meson-log.txt
data/: README.md  io.github.diegoivan.Kleroterion.desktop.in  io.github.diegoivan.Kleroterion.gschema.xml  io.github.diegoivan.Kleroterion.metainfo.xml.in  meson.build  page.codeberg.foreverxml.Random.appdata.xml.in  page.codeberg.foreverxml.Random.desktop.in  page.codeberg.foreverxml.Random.gschema.xml  page.codeberg.foreverxml.Random.metainfo.xml.in
data/icons/: meson.build
data/icons/hicolor/source/: page.codeberg.foreverxml.Random.tar.xz
help/: README.md  clipboard-paste.webm  coin.webm  number-roulette.webm  number.webm  pick-remove.webm  remove-all.webm  roulette.webm  switch-ctrl-tab.webm  switch-mouse.webm  switch-tab-enter.webm
po/: LINGUAS  POTFILES  README.md  de.po  en_GB.po  es.po  hu.po  hu_HU.po  id.po  it.po  meson.build  nl.po  pt_BR.po  random.pot  randomgtk.pot  ru.mo  ru.po
sp/: page.codeberg.foreverxml.Random.SearchProvider.service
src/: 1.css  2.css  3.css  4.css  5.css  7.css  CoinPage.vala  NumberPage.vala  Page.vala  README.md  RoulettePage.vala  config.vapi  func.vala  kleroterion.gresource.xml  main.vala  meson.build  random.gresource.xml  roulettelist.ui  roulettelist.vala  rouletterow.vala  shortcut.ui  sp.vala  style-dark.css  style.css  window.ui  window.ui~  window.vala
src/pages/: coinpage.ui  numberpage.ui  page.ui  roulettepage.ui
src/ui/: roulette-row.ui
