scalable_dir = join_paths('hicolor', 'scalable', 'apps')
if get_option('devel')
  install_data(
    join_paths(scalable_dir, 'devel', 'page.codeberg.foreverxml.Random.svg'),
    install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
  )
else
  install_data(
    join_paths(scalable_dir, 'page.codeberg.foreverxml.Random.svg'),
    install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
  )
endif


symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
install_data(
  join_paths(symbolic_dir, 'page.codeberg.foreverxml.Random-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'roulette-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'dialpad-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'coin-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'menu-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)
